--- a/app/src/main/res/layout/activity_screen345.xml
+++ b/app/src/main/res/layout/activity_screen345.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<<<<<<< Updated upstream
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-=======
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
->>>>>>> Stashed changes
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-<<<<<<< Updated upstream
     android:orientation="vertical"
     tools:context=".screen789"
     android:background="@drawable/homebg">
@@ -82,12 +78,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/question1"
-                android:layout_below="@+id/q1quiztext">
+                android:layout_below="@+id/q1quiztext"
+                >
 
                 <RadioButton
                     android:id="@+id/first"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
+                    android:buttonTint="@color/black"
                     android:layout_marginStart="10dp"
                     android:text="Mascarene Islands"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
@@ -104,8 +102,7 @@
                     android:textAlignment="viewStart"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
                     android:textSize="15sp"
-
-
+                    android:buttonTint="@color/black"
                     />
 
 
@@ -117,7 +114,9 @@
                     android:text="St Brandon"
                     android:textAlignment="viewStart"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    android:buttonTint="@color/black"
+                    />
 
                 <RadioButton
                     android:id="@+id/fourth"
@@ -127,7 +126,9 @@
                     android:text="Dina Arobi"
                     android:textAlignment="viewStart"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    android:buttonTint="@color/black"
+                    />
             </RadioGroup>
 
 
@@ -151,7 +152,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/question2text"
-                android:id="@+id/question2">
+                android:id="@+id/question2"
+                >
 
                 <RadioButton
                     android:id="@+id/mascarene"
@@ -161,7 +163,7 @@
                     android:text="Don Pedro"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
                     android:textSize="15sp"
-
+                    android:buttonTint="@color/black"
                     />
 
                 <RadioButton
@@ -173,7 +175,7 @@
                     android:textAlignment="viewStart"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
                     android:textSize="15sp"
-
+                    android:buttonTint="@color/black"
 
                     />
 
@@ -186,7 +188,9 @@
                     android:text="Bruno Fernandes"
                     android:textAlignment="viewStart"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    android:buttonTint="@color/black"
+                    />
 
                 <RadioButton
                     android:id="@+id/brandon"
@@ -197,6 +201,7 @@
                     android:textAlignment="viewStart"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
                     android:textSize="15sp"
+                    android:buttonTint="@color/black"
 
                     />
             </RadioGroup>
@@ -230,6 +235,7 @@
                     android:layout_marginStart="10dp"
                     android:textSize="15sp"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                    android:buttonTint="@color/black"
 
                     />
 
@@ -241,6 +247,8 @@
                     android:textAlignment="viewStart"
                     android:textSize="15sp"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                    android:buttonTint="@color/black"
+
 
 
                     />
@@ -253,7 +261,9 @@
                     android:layout_marginStart="10dp"
                     android:textAlignment="viewStart"
                     android:textSize="15sp"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
+                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                    android:buttonTint="@color/black"
+                    />
 
                 <RadioButton android:id="@+id/D"
                     android:layout_width="wrap_content"
@@ -263,6 +273,7 @@
                     android:textAlignment="viewStart"
                     android:textSize="15sp"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                    android:buttonTint="@color/black"
 
                     />
 
@@ -299,6 +310,7 @@
                     android:layout_marginStart="10dp"
                     android:textSize="15sp"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                    android:buttonTint="@color/black"
 
                     />
 
@@ -310,6 +322,7 @@
                     android:textAlignment="viewStart"
                     android:textSize="15sp"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                    android:buttonTint="@color/black"
 
 
                     />
@@ -322,7 +335,9 @@
                     android:layout_marginStart="10dp"
                     android:textAlignment="viewStart"
                     android:textSize="15sp"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
+                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                    android:buttonTint="@color/black"
+                    />
 
                 <RadioButton android:id="@+id/four"
                     android:layout_width="wrap_content"
@@ -332,6 +347,7 @@
                     android:textAlignment="viewStart"
                     android:textSize="15sp"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                    android:buttonTint="@color/black"
 
                     />
 
@@ -368,6 +384,7 @@
                     android:layout_marginStart="10dp"
                     android:textSize="15sp"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                    android:buttonTint="@color/black"
                     />
 
                 <RadioButton
@@ -379,6 +396,7 @@
                     android:textAlignment="viewStart"
                     android:textSize="15sp"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                    android:buttonTint="@color/black"
                     />
 
 
@@ -391,7 +409,9 @@
                     android:layout_marginStart="10dp"
                     android:textAlignment="viewStart"
                     android:textSize="15sp"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
+                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                    android:buttonTint="@color/black"
+                    />
 
                 <RadioButton
                     android:id="@+id/questionfived"
@@ -402,7 +422,7 @@
                     android:textAlignment="viewStart"
                     android:textSize="15sp"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
-
+                    android:buttonTint="@color/black"
                     />
 
             </RadioGroup>
@@ -415,13 +435,16 @@
                 android:layout_centerHorizontal="true"
                 android:id="@+id/quizsubmit"/>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_below="@+id/quizsubmit">
+
+            </LinearLayout>
+
         </RelativeLayout>
 
     </ScrollView>
 
 </LinearLayout>
-=======
-    tools:context=".screen345">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
->>>>>>> Stashed changes
