--- a/app/src/main/res/layout/editingprofile.xml
+++ b/app/src/main/res/layout/editingprofile.xml
@@ -83,8 +83,8 @@
                 android:layout_marginTop="500dp"
                 android:layout_marginLeft="100dp"
                 android:text="Confirm"
-                android:textStyle="bold"
-                android:background="@color/black"/>
+                android:background="@drawable/round_back_secondary"
+                android:textStyle="bold"/>
         </RelativeLayout>
     </RelativeLayout>
 </FrameLayout>
