--- a/app/src/main/res/layout/activity_all_nature.xml
+++ b/app/src/main/res/layout/activity_all_nature.xml
@@ -69,8 +69,8 @@
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:clickable="true"
-                android:id="@+id/ssrg">
+                android:id="@+id/ssrg"
+                android:clickable="true">
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="190dp"
