--- a/app/src/main/res/layout/activity_screen2.xml
+++ b/app/src/main/res/layout/activity_screen2.xml
@@ -44,10 +44,7 @@
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        android:layout_height="wrap_content">
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -113,11 +110,8 @@ of about 1500, it is shown by an Arabic name `Dina Arobi'."
         />
 
 
-<<<<<<< HEAD
     </RelativeLayout>
 
     </ScrollView>
 
-=======
->>>>>>> a8f268d5d5de6fae3990eff5f598c7c795457dec
 </FrameLayout>
