--- a/app/src/main/res/layout/activity_screen20.xml
+++ b/app/src/main/res/layout/activity_screen20.xml
@@ -64,10 +64,7 @@
     <ScrollView
         android:id="@+id/scrollView20"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        android:layout_height="wrap_content">
 
     <RelativeLayout
         android:layout_width="wrap_content"
